[tool.poetry]
name = "gpt-server-py"
version = "0.1.0"
description = ""
authors = ["harshith <harshith.krpt@gmail.com>"]
readme = "README.md"
packages = [{ include = "gpt_server_py", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.12.3"
fastapi = { version = ">=0.115.12,<0.116.0", extras = ["standard"] }

[tool.poetry.scripts]
gpt-server-py = "gpt_server_py.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
