[project]
name = "poetry-basics"
version = "0.1.0"
description = ""
authors = [
    {name = "Harshith Kurapati",email = "harshith.krpt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pendulum (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "poetry_basics", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
